test/corpus/blocks.txt
===
Empty Twig block
===

{% block some_block %}{% endblock %}

---

(template
  (statement_directive
    (tag_statement
      (tag)
      (variable)))
  (statement_directive
    (tag_statement
      (tag))))

===
Nested Twig blocks
===

{% block parent_block %}
  {% block child_block %}{% endblock %}
{% endblock %}

---

(template
  (statement_directive
    (tag_statement
      (tag)
      (variable)))
  (statement_directive
    (tag_statement
      (tag)
      (variable)))
  (statement_directive
    (tag_statement
      (tag)))
  (statement_directive
    (tag_statement
      (tag))))

===
Twig blocks with content
===

{% block some_block %}
    Hello, world!
{% endblock %}

---

(template
  (statement_directive
    (tag_statement
      (tag)
      (variable)))
  (content)
  (statement_directive
    (tag_statement
      (tag))))

===
If statement
===

{% if VUE3 %}
    Some Content 
{% endif %}

---

(template
  (statement_directive
    (if_statement
      (conditional)
      (variable)))
  (content)
  (statement_directive
    (tag_statement
      (conditional))))

===
Parent
===

{% block some_block %}
    {% parent() %}
{% endblock %}

---

(template
  (statement_directive
    (tag_statement
      (tag)
      (variable)))
  (statement_directive
    (function_call
      (function_identifier)
      (arguments)))
  (statement_directive
    (tag_statement
      (tag))))
